Amend the FA Constitution
Incorporate the changes voted on and approved at the TUCFA’s 21 May
2015 AGM.

--- a/about/TUCFA_Constitution.tex
+++ b/about/TUCFA_Constitution.tex
@@ -26,19 +26,23 @@
   colorlinks=true,
   urlcolor=BrickRed,  % for external links
   linkcolor=NavyBlue, % for normal internal links
-  pdftitle={TUCFA Constitution, 17 November 2005},
+  pdftitle={TUCFA Constitution, 21 May 2015},
   pdfauthor={Tyndale University College Faculty Association},
   pdfcreator={FA Secretary-Treasurer}}
 \urlstyle{same} % don't use monospace font for urls
 
-\title{Tyndale University College\\Faculty Association}
-\author{CONSTITUTION}
+\title{Constitution of the\\Tyndale University College\\Faculty Association}
+\author{%
+  Web: \href{http://tucfa.ca/}{tucfa.ca}\\
+  Email: \href{mailto:fa@tucfa.ca}{fa@tucfa.ca}
+}
 \date{%
-  As approved at the General Meeting of 17 November 2005
+  As amended at the General Meeting of 21 May 2015
 }
 
 \begin{document}
 \maketitle
+\tableofcontents
 
 \section{Name}
 
@@ -63,39 +67,39 @@ Members of the Faculty Association may be affiliated with the Canadian Associati
 
 \section{Membership}
 
-\subsection{}
+\subsection{Full Membership}
 
-Full membership in the Association is open to all full-time members of the teaching faculty of Tyndale University College, as well as those faculty teaching at least four courses per academic year, including the Library director, and administrative faculty exclusive of those who sit on cabinet.
+Full membership in the Association is open to all full-time members of the teaching faculty of Tyndale University College, including the Library director and administrative faculty exclusive of those who sit on cabinet, as well as those faculty teaching at least four courses per academic year.
 
-\subsection{}
+\subsection{Associate Membership}
 Retired members of the TUCFA who continue to be employed by the institution may be associate members. Associate members will have no power to vote, and are not eligible for membership on the Executive Committee.
 
-\subsection{}
+\subsection{Continuation}
 Membership may continue until employment with the University is terminated; or until a change of status results in ineligibility for TUCFA membership.
 
-\subsection{}
+\subsection{Withdrawal}
 Any member may withdraw from membership upon written notice to the President of the Association.
 
-\subsection{}
+\subsection{Establishment and Suspension}
 
-Membership shall be established by the payment of dues of those eligible (\$1.00 per annum). Failure to pay dues for a period of six months will result in suspension of membership.
+Membership shall be established by the payment of dues of those eligible (\$100.00 per annum for full members, \$1.00 per annum for associate members). Failure to pay dues for a period of six months will result in suspension of membership.
 
 \section{Dues}
 
-The annual dues are set out at the Annual General Meeting held in May of each year.
+The annual dues are set out at the Annual General Meeting held in May of each year. The call shall be for dues to cover the next academic year, payable in most cases before 1 December.
 
 \section{Executive Committee of the TUCFA}
 
-\subsection{}
+\subsection{Elected Officers}
 The Executive Committee of the TUCFA shall consist of three elected officers: the President, the Vice-President, and the Secretary-Treasurer.
 
-\subsection{}
+\subsection{Annual Election}
 An election to fill vacancies among the elected officers shall be held at the Annual General Meeting. Newly elected members shall assume office at the close of the Annual General Meeting. Preceding the election, a nominating committee shall actively seek nominations from the general membership and shall endeavour to secure a list of nominees broadly representative of the membership.
 
-\subsection{}
+\subsection{Eligibility}
 Only full members of the Association are eligible for election to the Executive Committee. Any member of the Executive Committee who assumes administrative or managerial duties during his or her term of office, which would make him or her ineligible for election pursuant to this clause, shall be deemed thereby to have resigned from the Executive.
 
-\subsection{}
+\subsection{Terms of Office}
 The terms of office for elected members of the Executive Committee shall be as follows:
 
 \begin{enumerate}
@@ -107,30 +111,31 @@ Vice-President --- one year
 Secretary-Treasurer --- one year
 \end{enumerate}
 
-\subsection{}
+\subsection{Compensation}
 No honoraria shall be paid by the Association to any member of the Executive Committee.
 
-\subsection{}
+\subsection{Re-election}
 All members of the Executive are eligible for re-election at the expiration of their term of office. Executive members shall not serve for more than three consecutive years, unless there are no other candidates for the position, or unless they are elected by the votes of at least two-thirds of the members present at the Annual General Meeting.
 
 \subsection{Vacancies on the Executive Committee}
 
-\subsubsection{}\label{by-elections}
+\subsubsection{By-elections}
+\label{by-elections}
 Should an elected member of the Executive Committee resign or be unable to continue in office for any reason, a by-election shall be held to elect a replacement for the unexpired term of office of that member within 30 days of the occurrence of the vacancy.
 
-\subsubsection{}
+\subsubsection{Succession}
 Should the Presidency become vacant during the President's term of office, the Vice-President shall act as President until a by-election is held.
 
-\subsubsection{}
+\subsubsection{Removal of One or More Officers}
 \label{remove-one}
 At a duly constituted General Meeting of the Association, any or all of the elected members of the Executive Committee may be called upon to resign by a motion passed by a two-thirds majority of the full members present and eligible to vote, provided that any notice of motion appears on the written agenda circulated 48 hours in advance of the meeting. The members of the Executive Committee identified in the motion shall then be held to have resigned, and the provisions of \ref{by-elections} shall hold, except as specified in \ref{remove-more} below.
 
-\subsubsection{}
+\subsubsection{Removal of More Than One Officer}
 \label{remove-more}
 
-In the event that a motion passed as in \ref{remove-one} above requires the resignation of more than one of the elected members of the Executive Committee a mail (or e-mail) ballot on that motion shall be held without delay. If the motion is then passed by a simple majority of those members voting, the Past President (or designate) shall, within ten days, call and chair a special General meeting of the Association. This meeting shall elect an interim Executive Committee, which committee shall appoint a nominating committee within seven days, and proceed to hold an election for a new Executive Committee, using the procedures as specified in the By-Laws.
+In the event that a motion passed as in \ref{remove-one} above requires the resignation of more than one of the elected members of the Executive Committee, a mail (or e-mail) ballot on that motion shall be held without delay. If the motion is then passed by a simple majority of those members voting, the Past President (or designate) shall, within ten days, call and chair a special General Meeting of the Association. This meeting shall elect an interim Executive Committee, which committee shall appoint a nominating committee within seven days, and proceed to hold an election for a new Executive Committee, using the procedures as specified in the Constitution.
 
-\subsubsection{}
+\subsubsection{Interim Officers}
 Should it be necessary to fill a position on the Executive Committee on an interim basis pending an election or by-election, the Executive Committee shall do so, informing the general membership of its action forthwith.
 
 \subsection{Duties of Officers}
@@ -171,7 +176,7 @@ Shall be responsible for the care and custody of funds and assets of the Faculty
 \item
 At each Annual General Meeting of the Faculty Association shall present an account of the Faculty Association's finances, and an appropriate budget for the TUCFA for the forthcoming year, together with any recommendations for changes in the fee structure;
 \item
-Shall maintain books of account and make these available for inspection to the members of the Faculty Association on request;
+Shall maintain books of account and make these available for inspection to the members of the Faculty Association on request.
 \end{enumerate}
 
 \subsubsection{The Executive Committee}
@@ -193,39 +198,46 @@ Standing Committees may only be established or abolished by a two-thirds majorit
 
 \section{Meetings}
 
-\subsection{}
+\subsection{General, Executive, and Emergency}
 General Meetings of the TUCFA and meetings of the Executive Committee may be called at any time by the President. Emergency meetings also may be called by the President. Decisions taken at an Emergency meeting must be ratified by a quorum present at a subsequent meeting, the agenda of which must be circulated not less than 48 hours after the Emergency meeting. The agenda for such meetings are prepared by the Secretary-Treasurer in consultation with the President and Vice-President and circulated to the appropriate membership.
 
-\subsection{}
+\subsection{Requests for Meetings}
 The President must call a meeting of the Faculty Association upon receipt of a written request to that effect, signed by at least five members stating the reason for which the meeting is desired.
 
-\subsection{}
+\subsection{Annual Meetings}
 There shall be at least two General Meetings of the TUCFA per year, at which time the Executive Committee shall report on its activities to the membership. One of these meetings shall be the Annual General Meeting of the TUCFA.
 
-\subsection{}
+\subsection{Order}
 The meetings will be conducted according to \emph{Robert's Rules of Order} unless otherwise specified in this Constitution.
 
 \section{Quorum}
 
-\subsection{}
+\subsection{Executive Committee}
 Two members of the Executive Committee, one of whom must be the President, shall form a quorum for an Executive Committee meeting.
 
-\subsection{}
+\subsection{General Meetings}
 A simple majority of the full members of the TUCFA shall form a quorum for a TUCFA General Meeting.
 
 \section{Voting}
 
-\subsection{}
+\subsection{Chairperson}
 The chairperson of a meeting of the Executive Committee shall have a regular vote. In the case of a tie vote, the motion shall be held to fail and the \emph{status quo} shall prevail.
 
-\subsection{}
+\subsection{Secret Ballot}
 Voting shall be by secret ballot if so requested by the majority of members present at any Faculty Association meeting.
 
-\subsection{}
+\subsection{By E-mail}
 In the event of an emergency, as determined by a quorom of the Executive Committee, an e-mail vote may be taken on the question(s) at hand.
 
 \section{Amendments to the Constitution}
 
-At least one week's notice of proposed amendments must be given in writing through the Secretary-Treasurer. After due discussion at a General meeting and providing two-thirds of members present and voting concur, the Constitution may be amended by a majority of those voting.
+At least one week's notice of proposed amendments must be given in writing through the Secretary-Treasurer. After due discussion at a General Meeting and providing two-thirds of members present and voting concur, the Constitution may be amended by a majority of those voting.
+
+\begin{itemize}
+\item
+Ratified 17 November 2005
+\item
+Amended 21 May 2015
+\end{itemize}
 
 \end{document}
