--- a/_posts/2018-04-18-public-financials-2015-2018.md
+++ b/_posts/2018-04-18-public-financials-2015-2018.md
@@ -4,7 +4,7 @@ title: "Public Financial Information, 2015–2018"
 date: 18 April 2018
 ---
 
-As noted [previously](http://tucfa.ca/2015/12/10/public-financials-update/), Tyndale University College & Seminary and the Tyndale Foundation are required to file information returns with the the Canada Revenue Agency every year. Below are the numbers as of April 30, 2017 (this post will be updated once the 2018 information is available). Collected data for 2011–2014 is available [here](http://tucfa.ca/2015/11/12/public-financials/). This information is publicly accessible on the [CRA website for charities and giving][CRA].
+As noted [previously](http://tucfa.ca/2015/12/10/public-financials-update/), Tyndale University College & Seminary and the Tyndale Foundation are required to file information returns with the Canada Revenue Agency every year. Below are the numbers as of April 30, 2017 (this post will be updated once the 2018 information is available). Collected data for 2011–2014 is available [here](http://tucfa.ca/2015/11/12/public-financials/). This information is publicly accessible on the [CRA website for charities and giving][CRA].
 
 One trend that may be worth watching for Tyndale University College & Seminary is that while "Total revenue" and also "Management and administration" expenses are trending up, "Total compensation" is trending down.
 
