--- a/about/TUCFA_Constitution.tex
+++ b/about/TUCFA_Constitution.tex
@@ -26,7 +26,7 @@
   colorlinks=true,
   urlcolor=BrickRed,  % for external links
   linkcolor=NavyBlue, % for normal internal links
-  pdftitle={TUCFA Constitution, 21 May 2015},
+  pdftitle={TUCFA Constitution, 4 May 2021},
   pdfauthor={Tyndale University College Faculty Association},
   pdfcreator={FA Secretary-Treasurer}}
 \urlstyle{same} % don't use monospace font for urls
@@ -37,7 +37,7 @@
   Email: \href{mailto:fa@tucfa.ca}{fa@tucfa.ca}
 }
 \date{%
-  As amended at the General Meeting of 21 May 2015
+  As amended at the General Meeting of 4 March 2021
 }
 
 \begin{document}
@@ -78,15 +78,7 @@ Retired members of the TUCFA who continue to be employed by the institution may 
 Membership may continue until employment with the University is terminated; or until a change of status results in ineligibility for TUCFA membership.
 
 \subsection{Withdrawal}
-Any member may withdraw from membership upon written notice to the President of the Association.
-
-\subsection{Establishment and Suspension}
-
-Membership shall be established by the payment of dues of those eligible (\$100.00 per annum for full members, \$1.00 per annum for associate members). Failure to pay dues for a period of six months will result in suspension of membership.
-
-\section{Dues}
-
-The annual dues are set out at the Annual General Meeting held in May of each year. The call shall be for dues to cover the next academic year, payable in most cases before 1 December.
+Any member may withdraw from membership upon written notice to the President of the Association. Any member who does not participate in two consecutive TUCFA general meetings, without sending regrets, will be considered to have withdrawn his or her membership. In either case, any withdrawn member who subsequently chooses to attend a general meeting will be reinstated.
 
 \section{Executive Committee of the TUCFA}
 
@@ -238,6 +230,8 @@ At least one week's notice of proposed amendments must be given in writing throu
 Ratified 17 November 2005
 \item
 Amended 21 May 2015
+\item
+Amended 4 March 2021
 \end{itemize}
 
 \end{document}
